--- a/CHANGELOG
+++ b/CHANGELOG
@@ -193,3 +193,6 @@
 * Added :cache option to ForeignKeyLookupTransform that will preload the FK
   mappings if the underlying resolver supports it. Currently supported by 
   SQLResolver.
+* A Class extending ETL::Transform::Transform may now be passed as a transformer.
+  For example, in the control file you would define the transform as:
+  transform :a_field, MyTransform, {:option1 => 'option1'}.
