--- a/README
+++ b/README
@@ -77,7 +77,21 @@ Command line options:
 Control file examples can be found in the examples directory.
 
 == Running Tests
-The tests require Shoulda 1.x.
+
+Current state:
+- 11 failures on MySQL
+- 1 failure on Postgres
+
+The tests require:
+- gem install shoulda
+- gem install flexmock
+- gem install pg (if you want to run the tests on pg)
+
+The tests subfolder contains examples database.yml for mysql and postgres.
+
+To run the tests:
+- rake test DB=postgresql (for postgres)
+- otherwise just rake test
 
 == Feedback
 This is a work in progress. Comments should be made on the 
