Fix documentation link.

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Ruby Extract-Transform-Load (ETL) tool.
 
 == Online Documentation
 
-Available at http://activewarehouse.rubyforge.org/docs/activewarehouse-etl.html
+Available at https://github.com/aeden/activewarehouse-etl/wiki/Documentation
 
 == Features
 
