--- a/README.textile
+++ b/README.textile
@@ -61,6 +61,7 @@ ActiveWarehouse-ETL is the work of many people since late 2006 - here is a list,
 * Stephen Touset
 * sasikumargn
 * Andrew Kuklewicz
+* Leif Gustafson
 
 If your name should be on the list but isn't, please leave a comment!
 
