--- a/README.textile
+++ b/README.textile
@@ -62,6 +62,7 @@ ActiveWarehouse-ETL is the work of many people since late 2006 - here is a list,
 * sasikumargn
 * Andrew Kuklewicz
 * Leif Gustafson
+* flacido
 
 If your name should be on the list but isn't, please leave a comment!
 
