--- a/README.textile
+++ b/README.textile
@@ -63,6 +63,7 @@ ActiveWarehouse-ETL is the work of many people since late 2006 - here is a list,
 * Andrew Kuklewicz
 * Leif Gustafson
 * Andrew Sodt
+* Tyler Kiley
 
 If your name should be on the list but isn't, please leave a comment!
 
