--- a/README.textile
+++ b/README.textile
@@ -64,6 +64,8 @@ ActiveWarehouse-ETL is the work of many people since late 2006 - here is a list,
 * Leif Gustafson
 * Andrew Sodt
 * Tyler Kiley
+* Colman Nady
+* Scott Gonyea
 
 If your name should be on the list but isn't, please leave a comment!
 
