--- a/README.textile
+++ b/README.textile
@@ -66,6 +66,7 @@ ActiveWarehouse-ETL is the work of many people since late 2006 - here is a list,
 * Scott Gonyea
 * "Philip Dodds":https://github.com/pdodds
 * "Sinisa Grgic":https://github.com/sgrgic
+* "Kenny Meyer":https://github.com/kennym
 
 If your name should be on the list but isn't, please leave a comment!
 
