--- a/README.textile
+++ b/README.textile
@@ -68,6 +68,7 @@ ActiveWarehouse-ETL is the work of many people since late 2006 - here is a list,
 * "Sinisa Grgic":https://github.com/sgrgic
 * "Kenny Meyer":https://github.com/kennym
 * "Chris":https://github.com/chrisgogreen
+* "Peter Glerup Ericson":https://github.com/pgericson
 
 If your name should be on the list but isn't, please leave a comment!
 
