--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-1.0.0 - release candidate
+1.0.0
+* Fixes for Rails 3.2 (pgericson)
 * Allow .ctl.rb and .ebf.rb extensions for easier syntax coloring (chrisgogreen)
 * Support for limit/offset in database source (kennym)
 * Support for error handlers in etl: can be declared with on_error { |error| } (thbar)
