--- a/README.textile
+++ b/README.textile
@@ -69,6 +69,7 @@ ActiveWarehouse-ETL is the work of many people since late 2006 - here is a list,
 * "Kenny Meyer":https://github.com/kennym
 * "Chris":https://github.com/chrisgogreen
 * "Peter Glerup Ericson":https://github.com/pgericson
+* "Ian Morgan":https://github.com/seeingidog
 
 If your name should be on the list but isn't, please leave a comment!
 
