--- a/README.textile
+++ b/README.textile
@@ -70,6 +70,7 @@ ActiveWarehouse-ETL is the work of many people since late 2006 - here is a list,
 * "Chris":https://github.com/chrisgogreen
 * "Peter Glerup Ericson":https://github.com/pgericson
 * "Ian Morgan":https://github.com/seeingidog
+* "Julien Biard":https://github.com/tchukuchuk
 
 If your name should be on the list but isn't, please leave a comment!
 
