Add note on maintenance status
While this may change later, right now I'm not able to maintain aw-etl anymore.

I plan to write an easier-to-maintain, stripped-down version though.

--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,7 @@
 h1. ActiveWarehouse-ETL
 
+>>> AT THE MOMENT, THIS GEM IS NOT MAINTAINED ANYMORE <<<
+
 ActiveWarehouse-ETL is a Ruby Extract-Transform-Load (ETL) tool.
 
 This tool is both usable and used in production under its current form - but be aware the project is under reorganization: a new team is shaping up and we're working mostly on making it easier for people to contribute first. Up-to-date documentation will only come later.
